--- a/admin.html
+++ b/admin.html
@@ -229,6 +229,7 @@ async function loadData(){
     bannerLink.value=s.banner_link||"";
 
     ownerNameInput.value=s.owner_name||"";
+    ownerNameInput.value=s.owner_name||"";
     ownerInstagram.value=s.owner_instagram||"";
     ownerYoutube.value=s.owner_youtube||"";
     ownerBlog.value=s.owner_blog||"";
