--- a/index.html
+++ b/index.html
@@ -317,9 +317,9 @@ font-size:14px;
 
 .ad-item.highlight .ad-title{
   background:#f6f6f6;
-  border-radius:8px;
-  padding:6px 0;
-  transition:all 0.3s ease;
+  border-radius:10px;
+  padding:8px 0;
+  box-shadow:0 4px 12px rgba(0,0,0,0.05);
 }
 
 .ad-title{
