--- a/index.html
+++ b/index.html
@@ -315,13 +315,6 @@ font-size:14px;
   to{ box-shadow:0 0 20px rgba(135,206,235,0.6); }
 }
 
-.ad-item.highlight .ad-title{
-  background:#f6f6f6;
-  border-radius:10px;
-  padding:8px 0;
-  box-shadow:0 4px 12px rgba(0,0,0,0.05);
-}
-
 .ad-title{
   text-decoration:none;
 }
@@ -335,6 +328,16 @@ font-size:14px;
 .square-ad a,
 .ad-title{
   text-decoration:none !important;
+}
+
+.ad-item.highlight{
+  background:transparent !important;
+}
+
+.ad-item.highlight .ad-title{
+  background:#f6f6f6 !important;
+  border-radius:8px;
+  padding:6px 0;
 }
 
 </style>
