--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ font-size:14px;
 }
 
 .ad-item.highlight .ad-title{
-  background:#C9A227 !important;
+  background:#D4AF37 !important;
   border-radius:8px;
   padding:6px 0;
 }
