--- a/index.html
+++ b/index.html
@@ -326,6 +326,20 @@ font-size:14px;
   padding:6px 0;
 }
 
+/* 이미지 광고 검색 결과 */
+.ad-item.highlight .ad-title{
+  background:#ffffff !important;
+  border-radius:8px;
+  padding:6px 0;
+}
+
+/* 텍스트 광고 검색 결과 */
+.text-ad.highlight{
+  background:#E2C65C !important;   /* 겨자색 */
+  color:#fff !important;
+  border-color:#C9A227 !important;
+}
+
 </style>
 </head>
 
