--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ font-size:14px;
 
 /* 이미지 광고 검색 결과 */
 .ad-item.highlight .ad-title{
-  background:#ffffff !important;
+  background:#E2C65C !important;
   border-radius:8px;
   padding:6px 0;
 }
