--- a/index.html
+++ b/index.html
@@ -169,10 +169,9 @@ body{
 }
 
 .owner-sns a{
-  width:28px;
-  height:28px;
-  font-size:14px;
-  border-width:1.5px;
+  background:transparent;
+  border:1px solid #ccc;
+  color:#555;
 }
 
 .owner-sns a:hover{
