--- a/index.html
+++ b/index.html
@@ -169,9 +169,18 @@ body{
 }
 
 .owner-sns a{
-  background:transparent;
-  border:1px solid #ccc;
-  color:#555;
+  display:inline-flex;
+  align-items:center;
+  justify-content:center;
+  width:48px;
+  height:48px;
+  border-radius:50%;
+  background:#fff;
+  border:2px solid #87CEEB;
+  color:#87CEEB;
+  font-size:20px;
+  text-decoration:none;
+  transition:all 0.3s ease;
 }
 
 .owner-sns a:hover{
