--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@ body{
 
 /* 검색 */
 .search-box{
-  text-align:center;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  gap:6px;
   margin-bottom:30px;
 }
 
