--- a/index.html
+++ b/index.html
@@ -184,6 +184,19 @@ body{
 /* ================= 모바일 전용 ================= */
 @media (max-width:768px){
 
+.top-banner{
+  order:1;
+}
+
+.search-box{
+  order:2;
+}
+
+.container{
+  display:flex;
+  flex-direction:column;
+}
+
 /* 모바일에서 SNS 중앙 정렬 */
 .owner-sns{
   position:static !important;
