--- a/index.html
+++ b/index.html
@@ -189,6 +189,16 @@ body{
   flex-direction:column;
 }
 
+  .top-banner{
+    order:1;
+  }
+
+  .search-box{
+    order:2;
+  }
+
+}
+
 /* 모바일에서 SNS 중앙 정렬 */
 .owner-sns{
   position:static !important;
