--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <meta charset="UTF-8">
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600&display=swap" rel="stylesheet">
-<title>검색 플랫폼</title>
+<title>정보공유 플랫폼</title>
 
 <style>
 body{
@@ -183,6 +183,12 @@ body{
 
 /* ================= 모바일 전용 ================= */
 @media (max-width:768px){
+
+  .top-banner{
+    display:none;
+  }
+
+}
 
 /* 모바일에서 SNS 중앙 정렬 */
 .owner-sns{
