--- a/index.html
+++ b/index.html
@@ -184,10 +184,8 @@ body{
 /* ================= 모바일 전용 ================= */
 @media (max-width:768px){
 
-@media (max-width:768px){
-
   .top-banner{
-    display:none;
+    display:none !important;
   }
 
 }
