--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ body{
   <ins class="adsbygoogle"
        style="display:block"
        data-ad-client="ca-pub-5530864523798922"
-       data-ad-slot="슬롯번호"
+       data-ad-slot="5037510429"
        data-ad-format="auto"
        data-full-width-responsive="true"></ins>
   <script>
